added authentication middleware in routes
